# axiom-engine

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
.pipeline/scripts/: verify-engine.sh
axiom-renderer/: Cargo.toml
axiom-renderer/src/: camera.rs  gltf_load.rs  lib.rs  lux_shaders.rs  pbr.rs  renderer.rs
docs/: GAME_ENGINE_PLAN_V2.md  GAME_ENGINE_RESEARCH.md  LUX_INTEGRATION_RESEARCH.md
examples/killer_demo/: demo.axm
examples/particle_galaxy/: README.md  particle_galaxy.axm
examples/vulkan/: README.md  flat_color.lux  lux_triangle.axm  pbr_debug.axm  pbr_scene.axm  rotating_model.axm  rotating_model_README.md  screenshot_test.axm  triangle.axm
game/: README.md  asteroid_field.axm
lib/: ecs.axm
tests/: README.md  perf_collision_100ms.axm  perf_frame_loop_1000ms.axm  perf_game_logic_100ms.axm  perf_gltf_load_5000ms.axm  screenshot_pbr_helmet.axm
