[package]
name = "axiom-renderer"
version = "0.2.0"
edition = "2021"
description = "AXIOM GPU renderer — wgpu-backed cdylib with glTF PBR rendering"

[lib]
crate-type = ["cdylib"]

[dependencies]
wgpu = { version = "24", features = ["spirv"] }
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"

# PBR / glTF support
glam = "0.29"
gltf = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
